assets/main.css
/*****************************************
 * Root Theme Colors
 *****************************************/
:root {
  --AntiqueWhite: #ede3d2;
  --BlackOnyx:    #2c282c;
  --CendreBlue:   #3E7FA5;
  --DressBlues:   #2a3244;
  --SuperLemon:   #e4bf45;
}

/* Old colour shceme:
  DeepLake:     #00656B;
  GoldenRod:    #E2A829;
  Moth:         #D2CBAF;
  OliveNight:   #535040;
*/

/*****************************************
 * Base Layout
 *****************************************/
body {
  display: flex;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

/*****************************************
 * Main Content Area
 *****************************************/
.content {
  flex: 1;
  padding: 10px;
  margin-left: 10px;
  text-align: justify;
}

/*****************************************
 * Links in Content
 *****************************************/
.content a,
.content a:visited,
ul li a {
  color: var(--CendreBlue);
  text-decoration: none;
}

.content a:hover,
ul li a:hover {
  color: var(--SuperLemon);
  text-decoration: underline;
}

/*****************************************
 * Headings & Text
 *****************************************/
h1 {
  color: var(--BlackOnyx);
  border-bottom: 1px solid var(--BlackOnyx);
  padding-bottom: 10px;
  margin-bottom: 10px;
}

h2, h3, h4, p,
ol, ul {
  color: var(--BlackOnyx);
}

/*****************************************
 * Lists - tiered styling
 *****************************************/

/* Base padding for all lists */
ol, ul {
  padding-left: 1em;
  margin-bottom: 1em; /* add spacing below lists */
}

/* Unordered lists - tiered bullets */
ul {
  list-style-type: disc;  /* 1st level */
}

ul ul {
  list-style-type: circle;  /* 2nd level */
  padding-left: 1.5em;
}

ul ul ul {
  list-style-type: square;  /* 3rd level */
  padding-left: 2em;
}

/* Ordered lists - tiered numbering */
ol {
  list-style-type: decimal;  /* 1st level */
}

ol ol {
  list-style-type: lower-alpha;  /* 2nd level */
  padding-left: 1.5em;
}

ol ol ol {
  list-style-type: lower-roman;  /* 3rd level */
  padding-left: 2em;
}

/* Margin below list items for readability */
ul li, ol li {
  margin-bottom: 0.5em;
}


/*****************************************
 * Blockquotes
 *****************************************/
blockquote {
  border-left: 4px solid var(--CendreBlue);
  padding-left: 1em;
  color: var(--DressBlues);
  font-style: italic;
}

/*****************************************
 * Tables
 *****************************************/
table {
  border-collapse: collapse;
  width: 100%;
}

th, td {
  border: 1px solid var(--AntiqueWhite);
  padding: 8px;
  color: var(--BlackOnyx);
}

/*****************************************
 * Site Title
 *****************************************/
.site-title {
  color: var(--AntiqueWhite);
  padding-bottom: 5px;
  margin-bottom: 5px;
  text-align: left;
}

/*****************************************
 * MathJax and Custom Math Styling
 *****************************************/
.MathJax_Display,
.MathJax_SVG,
.MathJax_HTML,
.mathjax-color {
  color: var(--BlackOnyx);
}

/*****************************************
 * Sidebar Container
 *****************************************/
.sidebar {
  width: 290px;
  background-color: var(--DressBlues);
  padding: 5px;
}

/*****************************************
 * Sidebar Typography
 *****************************************/
.sidebar h1, 
.sidebar h2, 
.sidebar h3, 
.sidebar h4, 
.sidebar h5, 
.sidebar h6, 
.sidebar p, 
.sidebar li {
  color: var(--AntiqueWhite);
}

/*****************************************
 * Sidebar Info Box
 *****************************************/
.sidebar-info {
  margin: 5px 0;
  padding: 5px 0;
  border-top: 1px solid var(--AntiqueWhite);
  border-bottom: 1px solid var(--AntiqueWhite);
}

.sidebar-info p {
  color: var(--AntiqueWhite);
  margin: 5px 0;
  font-size: 0.9em;
}

.sidebar-info .icon-link {
  color: var(--AntiqueWhite);
  text-decoration: none;
  display: inline-block;
  margin-right: 10px;
}

.sidebar-info .icon-link:hover {
  color: var(--SuperLemon);
  text-decoration: underline;
}

/*****************************************
 * Sidebar Navigation Links
 *****************************************/
.sidebar ul {
  padding: 0;
  list-style: none;
}

.sidebar ul li {
  margin-bottom: 5px;
}

.sidebar ul li a {
  color: var(--AntiqueWhite);
  text-decoration: none;
}

.sidebar ul li a:hover {
  color: var(--SuperLemon);
  text-decoration: underline;
}

.sidebar-posts {
  margin: 10px 0;
  padding: 5px 0;
  border-top: 1px solid var(--AntiqueWhite);
}

.sidebar .sidebar-posts > span {
  color: var(--AntiqueWhite) !important;
  font-weight: bold;
  display: block;
  margin-bottom: 1px;
  margin-bottom: 5px;
}

.sidebar-submenu a {
  font-size: 0.75rem;
}

.sidebar-submenu {
  list-style: disc;
  padding-left: 1.25em; /* Adds space for the bullets */
}

/*****************************************
 * Comments Section
 *****************************************/
#comments {
  max-width: 100%;
  width: 800px;
  margin: 0 auto;
}

